--- a/index.html
+++ b/index.html
@@ -4,13 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pricing Plan</title>
 
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 
 <body>
 
+    <div class="container">
+        <main>
+            
+            <!-- Header -->
+            <header class="header">
+                <div>
+                    <h1>Our Pricing Plan</h1>
+                    <p>
+                        We are an industry-leading company that values honesty, integrity and efficiency,
+                        building quality products.
+                    </p>
+                </div>
+
+                <div class="toggle">
+                    <span>Monthly </span>
+                    <i class="bi bi-toggle-on"></i>
+                    <span>Yearly </span>
+                    <i class="bi bi-toggle-off"></i>
+                </div>
+            </header>
+            <!-- /.header -->
+
+
+        </main>
+    </div>
 </body>
 
 </html>
