add card and i made the site responsive

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
     <div class="container">
         <main>
-            
             <!-- Header -->
             <header class="header">
                 <div>
@@ -34,7 +33,87 @@
             </header>
             <!-- /.header -->
 
+            <!-- Cards -->
+            <section class="cards">
+                <div class="card">
+                    <h2>Basic</h2>
+                    <p class="small">Most Popular</p>
 
+                    <div class="price">
+                        <span>$</span>
+                        <strong>2.45</strong>
+                        <span>/mo</span>
+                    </div>
+
+                    <div class="yearly">
+                        <span>Yearly</span>
+                        <span class="badge">15% Off</span>
+                    </div>
+
+                    <button>Choose plan</button>
+
+                    <ul>
+                        <li>✔ Unlimited Products</li>
+                        <li>✔ Custom Permissions</li>
+                        <li>✔ Custom Infrastructure</li>
+                        <li>✖ Custom Design & Features</li>
+                        <li>✖ Unlimited updates</li>
+                        <li>✖ Unlimited Infrastructure</li>
+                    </ul>
+                </div>
+
+                <div class="card main">
+                    <h2>Professional</h2>
+                    <p class="small">Recommended</p>
+
+                    <div class="price">
+                        <span>$</span>
+                        <strong>4.45</strong>
+                        <span>/mo</span>
+                    </div>
+                    <div class="yearly">
+                        <span>Yearly</span>
+                        <span class="badge">15% Off</span>
+                    </div>
+                    <button class="light">Choose plan</button>
+
+                    <ul>
+                        <li>✔ Unlimited Products</li>
+                        <li>✔ Custom Permissions</li>
+                        <li>✔ Custom Infrastructure</li>
+                        <li>✔ Custom Design & Features</li>
+                        <li>✖ Unlimited updates</li>
+                        <li>✖ Unlimited Infrastructure</li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h2>Ultimate</h2>
+                    <p class="small">Best value</p>
+
+                    <div class="price">
+                        <span>$</span>
+                        <strong>12.45</strong>
+                        <span>/mo</span>
+                    </div>
+                    <div class="yearly">
+                        <span>Yearly</span>
+                        <span class="badge">15% Off</span>
+                    </div>
+
+                    <button>Choose plan</button>
+
+                    <ul>
+                        <li>✔ Unlimited Products</li>
+                        <li>✔ Custom Permissions</li>
+                        <li>✔ Custom Infrastructure</li>
+                        <li>✔ Custom Design & Features</li>
+                        <li>✔ Unlimited updates</li>
+                        <li>✔ Unlimited Infrastructure</li>
+                    </ul>
+                </div>
+            </section>
+            <!-- /.Cards -->
         </main>
     </div>
 </body>
